# qt_gh_update_checker

./: CHANGELOG.md  CMakeLists.txt  README.md  copilot.md
.github/workflows/: quality_security.yml  repo-create_doctoc_md.yml  sbom.yml
cmake/: qt_gh_update_checkerConfig.cmake.in
include/: qt_gh-update-checker.hpp
src/: cli_main.cpp
tests/: test_basic.cpp
